--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
     <string name="incomplete">Incomplete</string>
     <string name="complete">Complete</string>
     <string name="requester">REQUESTER:</string>
+    <string name="clear">CLEAR</string>
+
 </resources>
